# pyro

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.web.json  vite.config.ts
crates/pyro-helper/: Cargo.toml
crates/pyro-helper/src/: bmap.rs  bootconfig.rs  format.rs  main.rs  source.rs
scripts/: stage-helper.mjs
src/: App.tsx  api.ts  format.ts  i18n.ts  icons.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bootedit.rs  commands.rs  download.rs  drives.rs  flash.rs  main.rs  models.rs  settings.rs
src/shared/: brand.ts  types.ts
