[package]
name = "pyro"
version = "0.1.0"
description = "Pyro — flash OS images to USB drives & SD cards"
authors = ["Pyro contributors"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
notify-rust = "4"
ureq = "2"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
