[package]
name = "pyro"
version = "0.2.0"
description = "Pyro — flash OS images to USB drives & SD cards"
authors = ["Pyro contributors"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Embeds the built frontend and serves it over the tauri:// protocol instead of
# the dev server. Enabled automatically by `tauri build`; required for a plain
# `cargo build --release` to produce a standalone binary that runs on its own.
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
notify-rust = "4"
ureq = "2"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
